@@ -1,18 +1,22 @@
 package org.mahefa.data.structure;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+
 public abstract class Heap<T> {
 
-    protected DynamicArray<T> array;
+    protected List<T> list;
 
     public abstract void heapify(int index);
 
     public void insert(T t) {
-        if(array == null)
-            array = new DynamicArray<>();
+        if(list == null)
+            list = new ArrayList<>();
 
-        array.add(t);
+        list.add(t);
 
-        final int size = array.getCount();
+        final int size = list.size();
 
         if(size > 1) {
             for(int i = (size / 2) - 1; i >= 0; i--) {
@@ -23,22 +27,22 @@ public abstract class Heap<T> {
 
     public void remove(T t) {
         if(!isEmpty()) {
-            int count = array.getCount();
+            int count = list.size();
             int i;
 
             for(i = 0; i < count; i++) {
-                if(t.equals(array.get(i)))
+                if(t.equals(list.get(i)))
                     break;
             }
 
             // Swap it with the last element
-            array.swap(count - 1, i);
+            Collections.swap(list, count - 1, i);
 
             // Remove the las element
-            array.removeLast();
+            list.remove(list.size() - 1);
 
             // Heapify
-            count = array.getCount();
+            count = list.size();
 
             if(!isEmpty()) {
                 for(int j = (count / 2) - 1; j >= 0; j--) {
@@ -49,16 +53,16 @@ public abstract class Heap<T> {
     }
 
     public T get() {
-        return array.get(0);
+        return list.get(0);
     }
 
     public boolean contains(T t) {
         if(!isEmpty()) {
-            if(t.equals(array.get(0)))
+            if(t.equals(list.get(0)))
                 return true;
 
-            for(int i = array.getCount() - 1; i >= 1; i--) {
-                if(t.equals(array.get(0)))
+            for(int i = list.size() - 1; i >= 1; i--) {
+                if(t.equals(list.get(i)))
                     return true;
             }
         }
@@ -67,6 +71,6 @@ public abstract class Heap<T> {
     }
 
     public boolean isEmpty() {
-        return array.isEmpty();
+        return list.isEmpty();
     }
 }
